Agrego facilidades para especificar y editar el formato de certificado de asistencia para impresión personal

--- a/app/views/certificates_adm/show.html.erb
+++ b/app/views/certificates_adm/show.html.erb
@@ -73,6 +73,12 @@
 	      "person/conference does not have such field specified, " +
 	      "nothing will be displayed (no error will be " +
 	      "generated)") %></dd>
+
+      <dt><tt>certif</tt></dt>
+      <dd>
+	<%= _("Will include the specified conference's personal " +
+	      "certificate format; usually displayed as a "+
+	      "background.") %></dd> 
     </dl>
     <br/>
 
