Added the ability to rotate labels in certificates

--- a/app/views/certificates_adm/_test_form.html.erb
+++ b/app/views/certificates_adm/_test_form.html.erb
@@ -6,7 +6,7 @@
 
   <%= f.manual_in_row(select_tag(:conference_id,
                                  options_for_select(@conferences.map {|c|
-                                                    [c.name, c.id]})),
+                                                    ['%d. %s'%[c.id, c.name], c.id]})),
                       :title => _('Conference to generate the sample ' +
                                   'certificate for')) %>
 
